package creature;
public enum Race{
    Nothing,CalabashBrother,Grandfather,ScorpionEssence,SnakeEssence,Wannabe,Space
}